      on dh_install from debian/rules.
    - Remove debian/shotwell-dbg.README.Debian.
  * Use the upstream ChangeLog as changelog and add NEWS to docs.
  * Remove debian/shotwell.1 to use the upstream man page.
  * Don't install man page at shotwell-common.
  * Some packaging improvements (Closes:# 856708):
    - Move .desktop and appstream metadata from shotwell-common to shotwell.
    - Thanks to Jeremy Bicha <jbicha@ubuntu.com>

 -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Wed, 22 Mar 2017 06:51:19 +0100

shotwell (0.25.4+really0.24.5-0.1) unstable; urgency=medium

  * Revert to last stable release 0.24.5 (Closes: #850149).
    (Necessary, since unblock request #854912 for 0.25.4-0.1 was turned down.)

 -- Richard B. Kreckel <kreckel@debian.org>  Tue, 14 Feb 2017 18:47:24 +0100

shotwell (0.25.4-0.1) unstable; urgency=medium

  * New upstream release.
    - Many UI fixes (Closes: #849688).

 -- Richard B. Kreckel <kreckel@debian.org>  Sun, 05 Jan 2017 18:43:12 +0100

shotwell (0.25.4-1) unstable; urgency=medium

  * New upstream release (Closes: #849688, #851711).
  * debian/copyright:
    - Update copyright years for 2017.

 -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Fri, 03 Feb 2017 14:23:16 +0100

shotwell (0.25.1-1) unstable; urgency=medium

  * New upstream release.
    - Fix issue with indexes on PhotoTable (Closes: #777499).
  * debian/patches:
    - Refresh 0100-ios8.patch.
  * debian/control:
    - Add libgcr-3-dev to Build-Depends.
    - Bump libgexiv2-dev B-D minimum version to 0.10.4.
    - Bump libglib2.0-dev B-D minimum version to 2.40.
    - Bump libgtk-3-dev B-D minimum version to 3.14.

 -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Fri, 25 Nov 2016 04:24:55 +0100

shotwell (0.24.0-1) unstable; urgency=medium

  * New upstream release (Closes: #824164, #825788).
    - Fix inconsistent licensing metadata in icons/rejected.svg
      (Closes: #800902).
    - Fix crashes when opening files with external editor