@@ -14,6 +14,10 @@ shotwell (0.26.2-1) UNRELEASED; urgency=medium
   * Don't install man page at shotwell-common.
   * Some packaging improvements (Closes:# 856708):
     - Move .desktop and appstream metadata from shotwell-common to shotwell.
+    - debian/rules:
+      + Use dh_auto_configure instead of ./configure.
+      + Update rm paths for multiarch.
+      + Don't install the .a file either.
     - Thanks to Jeremy Bicha <jbicha@ubuntu.com>
 
  -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Wed, 22 Mar 2017 06:51:19 +0100
